Add basic metronome functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Metronomic</string>
+    <string name="metronome_playback_button">Start and stop metronome</string>
 </resources>
